[gd_scene load_steps=6 format=3 uid="uid://b73tnsfaykl15"]

[ext_resource type="Texture2D" uid="uid://dbv0rxf35jiaa" path="res://TMPTextures/2.png" id="1_55u8s"]
[ext_resource type="Script" path="res://economy_panel_manager.gd" id="1_f3k2y"]
[ext_resource type="Texture2D" uid="uid://ds7wnuyi7kkda" path="res://TMPTextures/1.png" id="2_2653u"]
[ext_resource type="Texture2D" uid="uid://diwhctx81rgik" path="res://TMPTextures/3.png" id="3_u2ao3"]

[sub_resource type="LabelSettings" id="LabelSettings_xusn2"]
font_size = 64

[node name="EconomyPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f3k2y")

[node name="EconomyPanelBackground" type="Polygon2D" parent="."]
position = Vector2(640, 0)
color = Color(1, 0.607843, 0.713726, 0.392157)
polygon = PackedVector2Array(640, 0, 640, 576, 0, 576, 0, 0)

[node name="EconomyPanelTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_right = 1280.0
offset_bottom = 91.0
text = "Ekonomia"
label_settings = SubResource("LabelSettings_xusn2")
horizontal_alignment = 1

[node name="TriangleEconomyBackground" type="Polygon2D" parent="."]
position = Vector2(-2160, -304)
scale = Vector2(1.875, 1.625)
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(1664, 256, 1792, 512, 1536, 512)

[node name="MaterialsUpgradeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 384.0
offset_right = 928.0
offset_bottom = 464.0
texture_normal = ExtResource("1_55u8s")
ignore_texture_size = true
stretch_mode = 0

[node name="GoldUpgradeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 248.0
offset_right = 1000.0
offset_bottom = 328.0
texture_normal = ExtResource("2_2653u")
ignore_texture_size = true
stretch_mode = 0

[node name="ResearchUpgradeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 992.0
offset_top = 384.0
offset_right = 1072.0
offset_bottom = 464.0
texture_normal = ExtResource("3_u2ao3")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="MaterialsUpgradeButton" to="." method="_on_materials_upgrade_button_down"]
[connection signal="button_down" from="GoldUpgradeButton" to="." method="_on_gold_upgrade_button_down"]
[connection signal="button_down" from="ResearchUpgradeButton" to="." method="_on_research_upgrade_button_down"]
